# Scan-Stash

./: .gitignore  README.md
PracticeProject/: .env  Dockerfile  docker-compose.yaml
PracticeProject/src/scanstash/: __main__.py
PracticeProject/src/scanstash.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
PracticeProject/src/scanstash/interfaces/: auth_service.py
backend/: .env  Dockerfile  docker-compose.yaml  pyproject.toml
backend/src/scanstash/: __main__.py
backend/src/scanstash.egg-info/: SOURCES.txt
backend/src/scanstash/interfaces/: auth_service.py  place_service.py  produtc_service.py  search_service.py
backend/src/scanstash/routes/: auth.py  items.py  place.py  product.py  search.py  test.py
backend/src/scanstash/services/: auth.py  place.py  product.py  search.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts  shared.module.ts
frontend/src/app/binding/: binding.component.html  binding.component.spec.ts  binding.component.ts
frontend/src/app/generator/: generator.component.css  generator.component.html  generator.component.ts
frontend/src/app/list-items/: list-items.component.css  list-items.component.html  list-items.component.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/menu/: menu.component.html  menu.component.ts
frontend/src/app/models/: add-product.ts  place.ts  (+2 more)
(+4 files in other folders)
