[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scanstash"
version = "0.1.0"
requires-python = "==3.11.*"

dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
style = [
    "mypy",
    "ruff",
]

[project.scripts]
run = "scanstash.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scanstash*"]
